WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111433
Fix unused parameter warnings in ARM assembler
https://bugs.webkit.org/show_bug.cgi?id=111433
Summary
Fix unused parameter warnings in ARM assembler
Csaba Osztrogonác
Reported
2013-03-05 06:36:13 PST
SSIA. Patch is coming soon.
Attachments
Patch
(2.45 KB, patch)
2013-03-05 06:39 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(3.59 KB, patch)
2013-03-06 09:09 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-03-05 06:39:34 PST
Created
attachment 191486
[details]
Patch
Kentaro Hara
Comment 2
2013-03-05 17:18:43 PST
Comment on
attachment 191486
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191486&action=review
> Source/JavaScriptCore/assembler/ARMAssembler.h:407 > static void revertJump(void* instructionStart, RegisterID rd, ARMWord imm) > { > + UNUSED_PARAM(rd);
You can remove the parameter name if there is no confusion. If the parameter name is needed for clarity, you can comment the parameter name. We use UNUSED_PARAM() only in an #if block. c.f.
http://markmail.org/message/jv3ncbuhropkkzoq
Csaba Osztrogonác
Comment 3
2013-03-06 09:09:02 PST
Created
attachment 191763
[details]
Patch
Csaba Osztrogonác
Comment 4
2013-03-06 09:11:08 PST
(In reply to
comment #2
)
> You can remove the parameter name if there is no confusion. If the parameter name is needed for clarity, you can comment the parameter name. We use UNUSED_PARAM() only in an #if block. > > c.f.
http://markmail.org/message/jv3ncbuhropkkzoq
Good point, I didn't remember this mail thread. But now I fixed the patch, remove the first function which is unreachable and changed one more older, but incorrect use of UNUSED_PARAM.
WebKit Review Bot
Comment 5
2013-03-06 09:41:39 PST
Comment on
attachment 191763
[details]
Patch Clearing flags on attachment: 191763 Committed
r144938
: <
http://trac.webkit.org/changeset/144938
>
WebKit Review Bot
Comment 6
2013-03-06 09:41:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug