Fix unused parameter warnings in ARM assembler https://bugs.webkit.org/show_bug.cgi?id=111433

Reviewed by Kentaro Hara.

* assembler/ARMAssembler.h: Remove unreachable revertJump() after r143346.
* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::moveIntsToDouble): Remove unused scratch parameter instead of UNUSED_PARAM.
(JSC::MacroAssemblerARM::branchConvertDoubleToInt32): Remove unused fpTemp parameter.
(JSC::MacroAssemblerARM::revertJumpReplacementToPatchableBranchPtrWithPatch): Remove unused parameters.


Canonical link: https://commits.webkit.org/129954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144938 268f45cc-cd09-0410-ab3c-d52691b4dbfc